<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <DUT Name="INPUT_VAR" Id="{5286979e-e7aa-43b1-82ec-13216a9641b0}">
    <Declaration><![CDATA[TYPE INPUT_VAR :
STRUCT
(*	
REAL_VAR=INT_VAR_Input*REAL_PARA_M+REAL_PARA_C

REAL_PARA_minWert>=REAL_VAR>=REAL_PARA_maxWert

INT_VAR_Output=(REAL_VAR-REAL_PARA_C)/REAL_PARA_M

*)	

	INT_VAR_Input AT %I*	:INT ; //Input von Klemme (z.B. 2100)
	REAL_VAR 				:REAL; //Wert als REAL/Float/Single (z.B. 21.00)
	REAL_VAR_PT1			:REAL; //Geglätteter Wert
	
	REAL_PARA_M 			:REAL := 0.01; //Parameter M
	REAL_PARA_C 			:REAL := 0; //Parameter C
	REAL_PARA_maxWert 		:REAL; //Maximaler Wert des nativen Wertes (z.B. 10V, 20mA)
	REAL_PARA_minWert 		:REAL; //Minimaler Wert des nativen Wertes (z.B. 0V, 4mA)
	
	REAL_PARA_PT1_T			:TIME; //Zeitkonstante für PT1, für T=0s Übertragung linear [s] 
	REAL_PARA_PT1_K			:REAL:=1; //Proportionalkonstante für PT1, default 1
	
	
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>